# steam-synchron-manager

./: CMakeLists.txt  COPYING  README.md  main.cpp  steam.cpp  steam.hpp  steam_appid.txt  steamtest.cpp
cmake/: FindSteam.cmake
